...
            app:layout_constraintEnd_toEndOf="@id/chatRoom_detail_toolbar"
            app:layout_constraintStart_toStartOf="@id/chatRoom_detail_toolbar"
            app:layout_constraintTop_toTopOf="@id/chatRoom_detail_toolbar"
            tools:text="@string/chatRoom_detail_toolbar" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/chatRoom_detail_arms_spinner"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="35dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@id/chatRoom_detail_ready_button"
            app:layout_constraintEnd_toEndOf="@id/chatRoom_detail_ready_button"
...
            app:layout_constraintBottom_toBottomOf="@id/chatRoom_detail_time_bg"
            app:layout_constraintEnd_toEndOf="@id/chatRoom_detail_time_bg"
            app:layout_constraintStart_toStartOf="@id/chatRoom_detail_time_bg"
            app:layout_constraintTop_toTopOf="@id/chatRoom_detail_time_bg" />

        <ImageView
            android:id="@+id/chatRoom_detail_speaker"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16sp"
            android:src="@drawable/ic_speaker"
            android:onClick="@{() -> viewModel.getSpeakerStatus()}"
            app:layout_constraintBottom_toBottomOf="@id/chatRoom_detail_editText_background"
...
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/chatRoom_detail_start_background"
            app:layout_constraintBottom_toTopOf="@id/chatRoom_detail_editText_background"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/chatRoom_detail_speaker_back"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:text="@string/chatRoom_detail_end_back"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:onClick='@{() -> viewModel.speakerGo("back")}'
...
